--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,47 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+.theme-menu__button:disabled::before {
+  animation: theme 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes theme {
+  from {
+    translate: 0;
+  }
+
+  to {
+    translate: 4px;
+  }
+}
+
+.like-icon.is-liked .heart {
+  fill: var(--like);
+  animation: like 0.3s 0.1s ease-in alternate-reverse;
+  transform-origin: center;
+}
+
+@keyframes like {
+  from {
+    scale: 1;
+  }
+
+  to {
+    scale: 1.5;
+  }
+}
+
+.like-icon.is-liked .sparks {
+  animation: like-sparks 0.3s 0.3s ease-in alternate-reverse;
+}
+
+@keyframes like-sparks {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
