--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,8 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
+  max-inline-size: 1440px;
 }
 
 h1,
@@ -35,6 +36,10 @@ input {
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
+}
+
+button {
+  cursor: pointer;
 }
 
 ul,
