--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,394 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--main-font), sans-serif;
+  font-variation-settings: "wght" var(--basic-font-weight);
+  color: var(--main-color);
+  background-color: var(--bg-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  margin: 100px 0 50px;
+  text-transform: uppercase;
+  font-family: var(--accent-font);
+  align-items: center;
+  justify-self: end;
+  padding: 25px;
+  gap: 20px;
+  width: clamp(370px, 50vw, 700px);
+}
+
+.header,
+.card,
+.card__image-container,
+.card__like-button,
+.save-button,
+.dialog__button,
+.dialog {
+  border: 2px solid var(--main-color);
+  background-color: var(--bg-color);
+}
+
+.header__title {
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  padding-block-start: 1.7em;
+}
+
+.header__description {
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+
+.theme-menu__button {
+  background-color: inherit;
+  border: none;
+  font-size: 14px;
+  position: relative;
+  text-transform: uppercase;
+}
+
+.theme-menu__button:disabled,
+.theme-menu__button:disabled::before,
+.theme-menu__button:hover {
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  margin-left: -20px;
+}
+
+.theme-menu__button:disabled,
+.theme-menu__button:disabled::before {
+  pointer-events: none;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button:after {
+  content: "";
+  position: absolute;
+  width: 90%;
+  height: 2px;
+  left: 5px;
+  right: 5px;
+  bottom: -3px;
+  background-color: var(--main-color);
+  scale: 0;
+  transition: scale 0.3s ease;
+  transform-origin: left;
+}
+
+.theme-menu__button:focus-visible::after {
+  scale: 1;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  width: clamp(370px, 50vw, 700px);
+  margin: 50px 0;
+}
+
+.card__title {
+  font-variation-settings: "wght" var(--title-font-weight);
+  padding: 5px 10px;
+}
+
+.card__image-container {
+  aspect-ratio: 1/1;
+  position: relative;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-position: right;
+  object-fit: cover;
+}
+
+.card:nth-of-type(2) .image {
+  filter: sepia(50%);
+}
+
+.card:nth-of-type(3) .image {
+  filter: saturate(2);
+}
+
+.card:nth-of-type(4) .image {
+  filter: brightness(50%);
+}
+
+.card:nth-of-type(5) .image {
+  filter: invert(1);
+}
+
+.card:nth-of-type(6) .image {
+  filter: contrast(10);
+}
+
+.card:nth-of-type(7) .image {
+  filter: saturate(200%);
+}
+
+.card:nth-of-type(8) .image {
+  filter: blur(2px) grayscale(50%);
+}
+
+.image__label {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  color: var(--main-color);
+  font-size: 14px;
+  text-transform: uppercase;
+  opacity: 0.5;
+  mix-blend-mode: hard-light;
+  z-index: 5;
+  font-family: var(--accent-font);
+  font-weight: var(--basic-font-weight);
+  text-shadow: -1px 0 var(--bg-color), 0 1px var(--bg-color),
+    1px 0 var(--bg-color), 0 -1px var(--bg-color);
+}
+
+@supports (
+  (text-stroke: 1px var(--bg-color)) or
+    (-webkit-text-stroke: 1px var(--bg-color))
+) {
+  .image__label {
+    -webkit-text-stroke: 1px var(--bg-color);
+    text-stroke: 1px var(--bg-color);
+    text-shadow: none;
+  }
+}
+
+.card:nth-of-type(n + 4) .image__label {
+  text-transform: lowercase;
+}
+
+.card__paragraph {
+  padding: 25px 25px 0;
+  font-size: 18px;
+}
+
+.card__buttons-container {
+  display: flex;
+  justify-content: end;
+  padding: 25px;
+  gap: 5px;
+}
+
+.card__icon-button {
+  background-color: inherit;
+  border: 2px solid transparent;
+  padding: 0;
+  display: flex;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--main-color);
+  transition: border 0.3s ease;
+}
+
+.card__like-button {
+  min-width: 130px;
+  background-color: inherit;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card__like-button::after,
+.save-button::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  background-color: var(--main-color);
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform ease-in-out 0.5s;
+}
+
+.card__like-button:hover::after,
+.save-button:hover::after {
+  transform: scaleX(1);
+}
+
+.card__like-button:focus,
+.save-button:focus,
+.dialog__button:focus {
+  outline: none;
+}
+
+.card__like-button:focus-visible,
+.save-button:focus-visible,
+.dialog__button:focus-visible {
+  box-shadow: 2px 2px var(--main-color);
+  transition: box-shadow 0.3s ease;
+}
+
+.save-buttons-container {
+  display: flex;
+  justify-content: center;
+  padding-block-end: 100px;
+}
+
+.save-button {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 15px;
+  position: relative;
+  text-align: center;
+}
+
+.button__text {
+  line-height: 0.9em;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  font-variation-settings: "wght" var(--basic-font-weight);
+}
+
+.button__text,
+.icon-floopy {
+  position: relative;
+  z-index: 2;
+  color: var(--accent-color);
+  mix-blend-mode: difference;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.core {
+  fill: transparent;
+}
+
+.main-body {
+  fill: transparent;
+}
+
+.like-icon:hover .core {
+  fill: #000;
+  transition: fill 0.3s;
+}
+
+.like-icon:hover .main-body {
+  fill: #000;
+  transition: fill 0.3s 0.05s;
+}
+
+.like-icon:not(:hover) .core {
+  fill: transparent;
+  transition: fill 0.3s 0.03s;
+}
+
+.like-icon:not(:hover) .main-body {
+  fill: transparent;
+  transition: fill 0.3s;
+}
+
+.like-icon:active .core,
+.like-icon:active .main-body {
+  fill: var(--like);
+  transition: fill 0.3s;
+}
+
+.like-icon.is-liked .core,
+.like-icon.is-liked .main-body {
+  fill: var(--like);
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--like);
+  transition: fill 0.3s 0.06s;
+}
+
+.dialog::backdrop {
+  background-color: #000;
+  opacity: 0.75;
+}
+
+.dialog__text {
+  font-family: var(--accent-font);
+  font-size: 14px;
+  font-variation-settings: "wght" var(--basic-font-weight);
+  line-height: 1.2em;
+  text-transform: uppercase;
+  color: var(--main-color);
+}
+
+.dialog {
+  position: fixed;
+  inset: 0;
+  inline-size: min(358px, 90vw);
+}
+
+.dialog[open] {
+  display: grid;
+  grid-template-rows: 40px 1fr;
+  grid-template-columns: 40px 1fr;
+  row-gap: 30px;
+  column-gap: 20px;
+  align-items: center;
+  padding: 30px;
+}
+
+.dialog__button {
+  padding: 10px 0;
+  width: 100%;
+  text-transform: uppercase;
+}
+
+.dialog[open] form {
+  grid-column: 1/3;
+}
+
+@media (width <= 375px) {
+  .header,
+  .card {
+    width: 100vw;
+  }
+
+  .save-button {
+    flex-direction: column;
+  }
+
+  .save-button .icon-floopy {
+    width: 28px;
+    height: 28px;
+  }
+
+  .header__title {
+    font-size: clamp(2.5rem, -0.7727rem + 16.3636vw, 3.0625rem);
+  }
 }
