--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,37 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-dark {
+  --basic-font-weight: 465;
+  --title-font-weight: 785;
+  --bg-color: #000;
+  --main-color: #00cc14;
+  --accent-color: var(--main-color);
+  --bg-image: repeating-linear-gradient(#000 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
+    linear-gradient(#007f0c, #004306);
+}
+
+:root.theme-light {
+  --basic-font-weight: 400;
+  --title-font-weight: 700;
+  --bg-color: #fff;
+  --main-color: #000;
+  --accent-color: var(--bg-color);
+  --bg-image: repeating-linear-gradient(#d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(90deg, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(#e7e7e7, #e7e7e7 0.1%, #1a1a1a);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root.theme-auto {
+    --basic-font-weight: 465;
+    --title-font-weight: 785;
+    --bg-color: #000;
+    --main-color: #00cc14;
+    --accent-color: var(--main-color);
+    --bg-image: repeating-linear-gradient(#000 0 2px, transparent 2px 4px),
+      repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
+      linear-gradient(#007f0c, #004306);
+  }
+}
