--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,14 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font: "Inter-Variable";
+  --accent-font: "PressStart2P";
+  --basic-font-weight: 400;
+  --title-font-weight: 700;
+  --bg-color: #fff;
+  --main-color: #000;
+  --accent-color: var(--bg-color);
+  --bg-image: repeating-linear-gradient(#d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(90deg, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(#e7e7e7, #e7e7e7 0.1%, #1a1a1a);
+  --like: #ff0000;
+}
