--- a/styles/animations.css
+++ b/styles/animations.css
@@ -27,6 +27,54 @@
   }
 }
 
+.sparks {
+  opacity: 0;
+}
+
+.core {
+  fill: transparent;
+}
+
+.main-body {
+  fill: transparent;
+}
+
+.like-icon:hover .core {
+  fill: #000;
+  transition: fill 0.3s;
+}
+
+.like-icon:hover .main-body {
+  fill: #000;
+  transition: fill 0.3s 0.05s;
+}
+
+.like-icon:not(:hover) .core {
+  fill: transparent;
+  transition: fill 0.3s 0.03s;
+}
+
+.like-icon:not(:hover) .main-body {
+  fill: transparent;
+  transition: fill 0.3s;
+}
+
+.like-icon:active .core,
+.like-icon:active .main-body {
+  fill: var(--like);
+  transition: fill 0.3s;
+}
+
+.like-icon.is-liked .core,
+.like-icon.is-liked .main-body {
+  fill: var(--like);
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--like);
+  transition: fill 0.3s 0.06s;
+}
+
 .like-icon.is-liked .heart {
   fill: var(--like);
   animation: like 0.3s 0.1s ease-in alternate-reverse;
