--- a/styles/variables.css
+++ b/styles/variables.css
@@ -11,4 +11,5 @@
     repeating-linear-gradient(90deg, #d3d3d3 0 2px, transparent 2px 4px),
     linear-gradient(#e7e7e7, #e7e7e7 0.1%, #1a1a1a);
   --like: #ff0000;
+  --transition: 0.3s ease;
 }
